[GREEN] Implement ReportController