@@ -2,10 +2,11 @@ package id.ac.ui.cs.advprog.eventsphere.report.repository;
 
 import id.ac.ui.cs.advprog.eventsphere.report.model.Report;
 import id.ac.ui.cs.advprog.eventsphere.report.model.ReportStatus;
+import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@Repository
 public class InMemoryReportRepository implements ReportRepository {
     private final Map<UUID, Report> reports = new HashMap<>();
 
@@ -24,14 +25,14 @@ public class InMemoryReportRepository implements ReportRepository {
     public List<Report> findByAttendeeId(UUID attendeeId) {
         return reports.values().stream()
                 .filter(report -> report.getAttendeeId().equals(attendeeId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<Report> findByStatus(ReportStatus status) {
         return reports.values().stream()
                 .filter(report -> report.getStatus() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
